Handling Java 17 usages to fix build